postgresql-storage/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
  name: postgresql-vs
  namespace: postgresql
spec:
  gateways:
  - istio-system/general-gateway
  hosts:
  - 'postgresql.stack.fredgentech.net'
  http:
  - retries:
      attempts: 3
      perTryTimeout: 2s
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: postgresql 
        port:
          number: 5432
